fix: content .main stretches now

--- a/src/components/layout/style.module.scss
+++ b/src/components/layout/style.module.scss
@@ -1,11 +1,11 @@
 .layout {
   padding: 30px 30px 0 150px;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     justify-content: space-between;
 }
